Rebased to start project left just black box in window

--- a/Readme
+++ b/Readme
@@ -1,16 +1,11 @@
 Stephen Calabro
-CS 432 Assignment 2
+CS 432 Assignment 3
 ===
 
-The red triangle program creats 4 images, a square(with multiple squares), a triangle(with 3 colors), a circle(with a fading gradient), and an ellipse.
-
-The p2 program creates a smiley face
-
+The p3 program creates 2 windows with rotating shapee with changing backgrounds.
 
 To compile the code type 'make'
 
 To run type 'make run'
-
-To run p2 type 'make run2'
 
 To clean the folder type 'make clean'
